--- a/FreshMVVMSample/Pages/CommentListPage.xaml
+++ b/FreshMVVMSample/Pages/CommentListPage.xaml
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="FreshMVVMSample.CommentListPage" Title="{Binding Title}">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+	xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+	x:Class="FreshMVVMSample.CommentListPage" Title="{Binding Title}">
+
 <ContentPage.ToolbarItems>
 	<ToolbarItem Name="Close" Command="{Binding CloseCommand}" Icon="close.png" />
 </ContentPage.ToolbarItems>
+	
 <ContentPage.Content>
         <ListView ItemsSource="{Binding Activity.Comments}" HasUnevenRows="true">
             <ListView.ItemTemplate>
@@ -11,7 +15,23 @@
                 		<StackLayout VerticalOptions="StartAndExpand" Orientation="Vertical" Padding="0">
 	                		<StackLayout VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" Orientation="Horizontal" Padding="5,0,5,0">
 	                			<StackLayout VerticalOptions="StartAndExpand" Orientation="Vertical" Padding="5" >
+	                				<controls:CircleImage Source="{Binding User.GravatarUrl}" Aspect="AspectFit">
+									  <controls:CircleImage.WidthRequest>
+									    <OnPlatform x:TypeArguments="x:Double"
+									      iOS="75"
+									      Android="55"
+									      WinPhone="75"/>
+									   </controls:CircleImage.WidthRequest>
+									<controls:CircleImage.HeightRequest>
+									    <OnPlatform x:TypeArguments="x:Double"
+									      iOS="75"
+									      Android="55"
+									      WinPhone="75"/>
+									   </controls:CircleImage.HeightRequest>
+									</controls:CircleImage>
+									<!--
 	                				<Image Source="{Binding User.GravatarUrl}" Aspect="AspectFill" HeightRequest="100" WidthRequest="100" />
+	                				-->
 			                		<Label Text="{Binding User.Name}" HorizontalOptions="CenterAndExpand" />
 	                			</StackLayout>
 		                		<Label Text="{Binding Body}" />
